--- a/tickets/templates/administracion/recepcion.html
+++ b/tickets/templates/administracion/recepcion.html
@@ -165,6 +165,9 @@
                                                         <h5 class="mt-2 text-center fw-bold">FECHA</h5>
                                                     </th>
                                                     <th>
+                                                        <h5 class="mt-2 text-center fw-bold">HORA</h5>
+                                                    </th>
+                                                    <th>
                                                         <h5 class="mt-2 text-center fw-bold">ATEND</h5>
                                                     </th>
                                                 </tr>
@@ -181,6 +184,9 @@
                                                     </td>
                                                     <td class="text-center align-middle">
                                                         <h5 id="fecha" class="">{{ ticketDepart.fecha }}</h5>
+                                                    </td>
+                                                    <td class="text-center align-middle">
+                                                        <h5 id="fecha" class="">{{ ticketDepart.hora }}</h5>
                                                     </td>
                                                     <td class="text-center align-middle">
                                                         {% if  ticketDepart.atendido %}
@@ -269,6 +275,9 @@
                                                     <h5 class="mt-2 text-center fw-bold">FECHA</h5>
                                                 </th>
                                                 <th>
+                                                    <h5 class="mt-2 text-center fw-bold">HORA</h5>
+                                                </th>
+                                                <th>
                                                     <h5 class="mt-2 text-center fw-bold">ESTADO</h5>
                                                 </th>
                                             </tr>
@@ -285,6 +294,9 @@
                                                     </td>
                                                     <td class="text-center align-middle">
                                                         <h5 id="fecha" class="">{{ ticketDepart.fecha }}</h5>
+                                                    </td>
+                                                    <td class="text-center align-middle">
+                                                        <h5 id="fecha" class="">{{ ticketDepart.hora }}</h5>
                                                     </td>
                                                     <td class="text-center align-middle">
                                                         <h5 id="" class="">NO PRESENTE</h5>
