--- a/tickets/templates/administracion/ticketsagente.html
+++ b/tickets/templates/administracion/ticketsagente.html
@@ -86,6 +86,9 @@
                                                     <h5 class="mt-2 text-center fw-bold">FECHA</h5>
                                                 </th>
                                                 <th>
+                                                    <h5 class="mt-2 text-center fw-bold">HORA</h5>
+                                                </th>
+                                                <th>
                                                     <h5 class="mt-2 text-center fw-bold">ESTADO</h5>
                                                 </th>
                                             </tr>
@@ -102,6 +105,9 @@
                                                     </td>
                                                     <td class="text-center align-middle">
                                                         <h5 id="fecha" class="">{{ ticketDepart.fecha }}</h5>
+                                                    </td>
+                                                    <td class="text-center align-middle">
+                                                        <h5 id="fecha" class="">{{ ticketDepart.hora }}</h5>
                                                     </td>
                                                     <td class="text-center align-middle">
                                                         <h5 id="" class="">NO PRESENTE</h5>
@@ -145,6 +151,9 @@
                                                         <h5 class="mt-2 text-center fw-bold">FECHA</h5>
                                                     </th>
                                                     <th>
+                                                        <h5 class="mt-2 text-center fw-bold">HORA</h5>
+                                                    </th>
+                                                    <th>
                                                         <h5 class="mt-2 text-center fw-bold">ATEND</h5>
                                                     </th>
                                                 </tr>
@@ -161,6 +170,9 @@
                                                     </td>
                                                     <td class="text-center align-middle">
                                                         <h5 id="fecha" class="">{{ ticketDepart.fecha }}</h5>
+                                                    </td>
+                                                    <td class="text-center align-middle">
+                                                        <h5 id="fecha" class="">{{ ticketDepart.hora }}</h5>
                                                     </td>
                                                     <td class="text-center align-middle">
                                                         {% if  ticketDepart.atendido %}
