--- a/tickets/templates/administracion/citas_callcenter.html
+++ b/tickets/templates/administracion/citas_callcenter.html
@@ -1,7 +1,52 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block nav_header %}
-{% include 'componentes/navbarheader.html' %}
+<nav class="navbar navbar-expand-lg navbar-dark pt-4 pb-3" style="background-color: #000000;">
+    <div class="container-fluid">
+        <a class="navbar-brand px-5">
+            <img src="../../static/img/Imagen1.png" alt="" width="95" height="55" class="d-inline-block align-text-top">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <form class="d-flex" style="padding-right: 30px;">
+                <a class="btn" href="{% url 'logout' %}" type="button">CERRAR SESIÓN</a>
+            </form>
+        </div>
+    </div>
+</nav>
+<style>
+    .navbar-dark .navbar-nav .nav-link {
+        color: rgb(255, 255, 255);
+    }
+    .btn{
+        border-radius: 50px;
+        background-color: #ffd142;
+        color: #000000;
+        font-weight: bold;
+        border-color: #ffd142;
+    }
+    .btn:hover {
+        background-color: #000000;
+        color: #ffd142;
+        border-color: #000000;
+    }
+
+    .navbar-dark .navbar-nav .nav-link.active, .navbar-dark .navbar-nav .show>.nav-link {
+        color: #ffd142;
+    }
+
+    .btn:focus,
+    .btn:active,
+    .navbar-brand:focus,
+    .navbar-brand:active {
+        outline: none !important;
+        box-shadow: none !important;
+    }
+
+</style>
 {% endblock %}
 {% block background %}
 
