--- a/tickets/templates/visualizador/ticket_control.html
+++ b/tickets/templates/visualizador/ticket_control.html
@@ -298,7 +298,7 @@
     }
 
     setInterval(actualizar_tabla, 1000);
-    setInterval(citas_act, 30000);
+    //setInterval(citas_act, 30000);
 </script>
 {% endblock %}
 
