--- a/tickets/templates/administracion/recepcion.html
+++ b/tickets/templates/administracion/recepcion.html
@@ -284,7 +284,7 @@
                                         </thead>
                                         <tbody>
                                             {% for ticketDepart in ticket %}
-                                                {% if ticketDepart.estado == 'CnP' %}
+                                                {% if ticketDepart.estado == 'N/P' %}
                                                 <tr class="colorfilas">
                                                     <td class="text-center align-middle">
                                                         <h5 id="id_agente">{{ ticketDepart.codigo }}</h5>
