--- a/tickets/templates/encuestas/encuesta_visor.html
+++ b/tickets/templates/encuestas/encuesta_visor.html
@@ -61,12 +61,10 @@
                     <div class="row mb-3" style="align-items: center; justify-content: center;">
                         <select ontouchstart="" onchange="obtenerValorSelect();" id="tramites_select" class="form-select form-select-lg mb-3 mt-3 roundedInput" name="tramites_select" >
                             <option selected disabled>Abrir para seleccionar.</option>
-                            <option value="Tiempo de espera.">Tiempo de espera.</option>
-                            <option value="Trámites lentos en ventanilla.">Trámites lentos en ventanilla.</option>
-                            <option value="Mala atencion brindada.">Mala atencion brindada.</option>
-                            <option value="No resolución del caso.">No resolución del caso.</option>
-                            <option value="Información incompleta.">Información incompleta.</option>
-                            <option value="Mal manejo de la información.">Mal manejo de la información.</option>
+                            <option value="Tiempo de atención muy prolongado.">Tiempo de atención muy prolongado.</option>
+                            <option value="Servicio con poca empatía y amabilidad.">Servicio con poca empatía y amabilidad.</option>
+                            <option value="La información no fue clara por desconocimiento del asesor.">La información no fue clara por desconocimiento del asesor.</option>
+                            <option value="En el servicio no se me brindaron más opciones de resolución">En el servicio no se me brindaron más opciones de resolución para mi necesidad.</option>
                         </select>
                     </div>
                     <div class="row mt-2" style="justify-content: center;">
