--- a/tickets/templates/ticket/ticketmaker.html
+++ b/tickets/templates/ticket/ticketmaker.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 <div class="container">
-<div class="row mt-2">
+<div class="row" style="margin-top: 12rem;">
     <div class="col-12 col-lg-12 col-md-12 col-sm-12 mx-auto mt-5 mb-5">
         <div class="card border-0 cardCol rounded-3 my-5 mx-auto">
             <div class="card-body pt-5 pl-8 pr-8">
@@ -63,9 +63,9 @@
 
 <!-- Model de Cambio de data -->
 {% block modal_tramites%}
-<div class="modal fade" id="modal_tramites" tabindex="-1" aria-labelledby="modal_tramitesTitle" style="display: none"
+<div class="modal fade " id="modal_tramites" tabindex="-1" aria-labelledby="modal_tramitesTitle" style="display: none"
     aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered custom-modal-lg" role="document">
+    <div class="modal-dialog modal-fullscreen-sm-down custom-modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-body">
                 <main class="form-signin">
